<resources>
    <string name="app_name">Noted</string>
    <string name="search_notes">Search notes</string>
    <string name="save">Save</string>
    <string name="type_a_title_here">Type a title here</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="note_fields_required">Note subtitle and note description are required.</string>
    <string name="note_title_required">Note title is required</string>
    <string name="note_description">Note Description</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="link_url_empty">URL can\'t be empty. Please enter a valid URL.</string>
    <string name="invalid_url">Please enter a valid URL.</string>
    <string name="link_url">Link URL</string>
    <string name="cancel">Cancel</string>
    <string name="add_link">Add Link</string>
    <string name="attached_links">Attached Links</string>
    <string name="note_deleted">Note deleted</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="share_note">Share Note</string>
    <string name="lock">Lock</string>
    <string name="speak_notes">Speak to search notes</string>
    <string name="home">Home</string>
    <string name="rate_us">Rate Us</string>
    <string name="settings">Settings</string>
    <string name="feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about">About</string>
    <string name="share_description">Share app with your friends</string>
    <string name="feedback_subject">Let us know what we can do to improve your experience with our application</string>
    <string name="gmail_not_installed">Gmail app is not installed on your device</string>
    <string name="fullscreen_mode">Fullscreen Mode</string>
    <string name="screen_on_mode">Screen on Mode</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>
    <string name="category_deleted">Category deleted</string>
    <string name="category_title">Category title</string>
    <string name="category_added">Category added</string>
    <string name="category_edited">Category edited</string>
    <string name="category_is_selected">category is Selected</string>
    <string name="all">All</string>
    <string name="choose_category">Choose Category</string>
    <string name="category">Category</string>
    <string name="save_note_before_share">Make sure to save the note before share</string>
    <string name="new_category">New</string>
    <string name="attach_link">Attach Link</string>
    <string name="attach_image">Attach Image</string>
    <string name="move_to_trash">Move to Trash</string>
    <string name="trash">Trash</string>
    <string name="note_discarded">Note discarded</string>
    <string name="note_moved_to_trash">Note moved to trash</string>
    <string name="archive">Archive</string>
    <string name="create_your_first_note">Create your first note</string>
    <string name="there_are_no_notes_in_this_category">There are no notes in this category.</string>
    <string name="delete_note">Delete Note</string>
    <string name="restore_from_trash">Restore from trash</string>
    <string name="note_restored">Note restored from trash</string>
    <string name="note_deleted_permanently">Note deleted permanently</string>
    <string name="there_are_no_notes_in_trash">There are no notes in trash</string>
    <string name="delete_all">Delete All</string>
    <string name="there_are_no_notes_in_archive">There are no notes in archive</string>
    <string name="save_note_before_archive">Make sure to save the note before archive</string>
    <string name="note_archived">Your note has been archived successfully</string>
    <string name="unarchive">Unarchive</string>
    <string name="note_restored_from_archive">Your note have been restored from archive</string>
    <string name="add_new_category">Add New Category</string>
    <string name="any_notes_to_add_add_your_first_note_by_clicking_on_add_button">Any notes to add? Add your first note by clicking on add button.</string>
    <string name="any_tasks_to_add_add_your_first_todo_task_by_clicking_on_add_button">Any tasks to add? Add your first todo task by clicking on add button.</string>
    <string name="popup_cancel">Cancel</string>
    <string name="popup_confirm">Confirm</string>
    <string name="delete_all_notes">Delete All Notes</string>
    <string name="delete_all_notes_description">Are you sure you want delete all notes permanently?</string>
    <string name="tap_again_to_exit">Tap Again To Exit</string>
    <string name="add_note">Add Note</string>
    <string name="reminder_set_successfully">Reminder set successfully. Save note to apply changes.</string>
    <string name="note_title_subtitle_empty">Note title and note subtitle can\'t be empty</string>
    <string name="note_saved">Note is saved successfully</string>
    <string name="reminder_set_at">Reminder set at:</string>
    <string name="reminders">Reminders</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="remove_reminder">Remove Reminder</string>
    <string name="reminder_removed">Reminder removed</string>
    <string name="failed_to_remove_reminder">Failed to remove reminder. Please contact support!</string>
    <string name="there_are_no_notes_in_reminder">There are no notes in reminders</string>
    <string name="set_your_passcode">Set your passcode</string>
    <string name="enter_four_digit_passcode">Enter 4-digit passcode</string>
    <string name="select">Select</string>
    <string name="select_note_for_action">You need to select a note first to before making actions</string>
    <string name="selected">Selected</string>
    <string name="remove_image">Remove Image</string>
    <string name="remove_video">Remove Video</string>
    <string name="remove_image_description">Are you sure you want remove the attached image?</string>
    <string name="remove_video_description">Are you sure you want remove the attached video?</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="widget">Widget</string>
    <string name="notifications">Notifications</string>
    <string name="select_a_widget_to_add_to_home_screen_automatically">Select a widget to add to home screen automatically</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="name_a_z">Name A - Z</string>
    <string name="popup_ok">OK</string>
    <string name="name_z_a">Name Z - A</string>
    <string name="sort_by_default">Sort by Default</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="login_with_fingerprint">Login with Fingerprint</string>
    <string name="select_video_from_gallery">Select video from gallery</string>
    <string name="share_image">Share Image</string>
    <string name="types">Types</string>
    <string name="colors">Colors</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="note_pin_code">Note Pincode</string>
    <string name="enter_new_pin_code">Enter New Pincode</string>
    <string name="pin_code_empty">Pin code can\'t be empty</string>
    <string name="note_locked">Note locked</string>
    <string name="pin_code_set">Pin code set successfully</string>
    <string name="enter_pin_code">Enter Pin Code</string>
    <string name="note_unlocked">Note Unlocked</string>
    <string name="unlock">Unlock</string>
    <string name="save_note_before_lock">Make sure to save note before lock</string>
    <string name="remove_pin">Remove Pin</string>
    <string name="update_pin">Update Pin</string>
    <string name="verify_pin_code">Verify Pin Code</string>
    <string name="pin_code_unset">Pin code removed successfully</string>
    <string name="reader_mode">Read Mode</string>
    <string name="close_reader_mode">Close Reader Mode</string>
    <string name="copy">Copy</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="export_as">Export As</string>
    <string name="export_note_as">Export Note As</string>
    <string name="export_as_txt">Export as .txt file</string>
    <string name="export_as_csv">Export as .csv file</string>
    <string name="saved_to">Saved to</string>
    <string name="speech_input">Speech Input</string>
    <string name="there_are_no_notifications_yet">There are no notifications yet</string>
    <string name="save_note_before_copy">Make sure to save note before copy</string>
    <string name="save_note_before_export">Make sure to save note before export</string>
    <string name="save_note_before_speech">Make sure to save note before speech</string>
    <string name="save_note_before_open_reader_mode">Make sure to save note before open reader mode</string>
    <string name="notes">Notes</string>
    <string name="todos">To-dos</string>
    <string name="all_todos">All to-dos</string>
    <string name="todo_title">To-do</string>
    <string name="uncompleted">Uncompleted</string>
    <string name="completed">Completed</string>
    <string name="mark_completed">Mark Completed</string>
    <string name="mark_uncompleted">Mark Uncompleted</string>
    <string name="enter_title">Enter title</string>
    <string name="add_details">Add Details</string>
    <string name="todo_title_required">Todo title can\'t be empty!</string>
    <string name="add_your_first_todo">Add your first todo</string>
    <string name="delete_all_completed_tasks">Delete all completed tasks</string>
    <string name="delete_all_completed_tasks_header">Delete all completed tasks?</string>
    <string name="delete_all_completed_tasks_description">completed tasks will be permanently deleted</string>
    <string name="backup_data">Backup Data</string>
    <string name="restore_data">Restore from Backup</string>
    <string name="create_new_list">Create new list</string>
    <string name="enter_list_title">Enter list title</string>
    <string name="todo_list_title_required">Todo list can\'t be empty</string>
    <string name="error_empty_list">Error while opening to-do list. Please try again later</string>
    <string name="move_task_to">Move task to</string>
    <string name="mark_as_important">Mark as Important</string>
    <string name="todo_moved_to">To-Do Moved to</string>
    <string name="there_are_no_todos_in_this_list">There is no to-dos in this list</string>
    <string name="backup_notes">Backup Notes</string>
    <string name="restore_notes">Restore Notes</string>
    <string name="failed_to_authenticate_fingerprint">Failed to authenticate fingerprint</string>
    <string name="data_backed_up">Data backed up successfully</string>
</resources>