<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_margin="10dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/popup_background"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="15dp"
        android:paddingEnd="5dp"
        android:paddingBottom="15dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/open_sans_bold"
            android:text="Attach Link"
            android:textColor="?color_dark"
            android:textSize="13sp"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@id/link"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/input_round_background"
            android:hint="@string/link_url"
            android:inputType="text"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:textColor="?color_dark"
            android:textColorHint="?color_dark"
            android:textDirection="locale"
            android:textSize="13sp"
            tools:ignore="Autofill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@id/cancel_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/color_theme"
                android:textSize="12sp" />

            <Button
                android:id="@id/add_link"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:background="@drawable/button_mini"
                android:enabled="true"
                android:gravity="center"
                android:text="@string/add_link"
                android:textAllCaps="true"
                android:textColor="@color/color_white"
                android:textSize="12sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText,SmallSp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
