<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?color_background"
    tools:context=".activities.ViewTodoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="?color_light_separate"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                tools:ignore="RelativeOverlap,UseCompoundDrawables">

                <ImageView
                    android:id="@id/go_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="?actionBarItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/long_arrow_back"
                    app:tint="?color_dark"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/todos"
                    android:layout_gravity="center_vertical"
                    android:textColor="?color_dark"
                    android:layout_marginStart="7dp"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText,RelativeOverlap" />

            </LinearLayout>

            <ImageView
                android:id="@id/todo_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?actionBarItemBackground"
                android:padding="4dp"
                android:src="@drawable/trash_icon_outline"
                app:tint="?color_dark"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@id/todo_created_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:hint="03.12.2003, 12:00 PM"
                    android:textColor="?color_dark"
                    tools:ignore="HardcodedText,RelativeOverlap" />

                <EditText
                    android:id="@id/todo_title"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:background="@null"
                    android:hint="@string/enter_title"
                    android:inputType="textCapSentences"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="?color_dark"
                    android:textColorHint="?color_dark"
                    android:textDirection="locale"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@id/todo_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/input_rectangle_background"
                    android:gravity="top"
                    android:hint="@string/add_details"
                    android:inputType="textCapSentences|textMultiLine"
                    android:minHeight="100dp"
                    android:padding="10dp"
                    android:textColor="?color_dark"
                    android:textColorHint="?color_dark"
                    android:textDirection="locale"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mark_as_important"
                        android:textColor="?color_dark"
                        android:layout_alignParentStart="true"
                        android:textSize="16sp"
                        tools:ignore="RelativeOverlap" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@id/todo_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:thumb="@drawable/switch_thumb"
                        app:track="@drawable/switch_track" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <include layout="@layout/todo_actions" />

</RelativeLayout>