<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?color_background"
    tools:context=".activities.WidgetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:background="?color_light_separate"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp">

            <ImageView
                android:id="@id/go_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?actionBarItemBackground"
                android:padding="4dp"
                android:src="@drawable/long_arrow_back"
                app:tint="?color_dark"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/widget"
                android:textColor="?color_dark"
                android:textSize="16sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:cardBackgroundColor="@color/color_alert_alpha"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="?actionBarItemBackground"
                    android:padding="4dp"
                    android:src="@drawable/icon_info"
                    app:tint="@color/color_alert"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:textColor="@color/color_alert"
                    android:text="@string/select_a_widget_to_add_to_home_screen_automatically"
                    android:textSize="13sp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@id/widget_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:paddingStart="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:paddingEnd="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:background="@drawable/widget_background"
                    tools:ignore="UselessParent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="UselessParent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="@string/add_note"
                            android:layout_marginStart="2dp"
                            android:textColor="@color/color_dark"
                            android:textSize="14sp"
                            android:layout_centerVertical="true"
                            tools:ignore="RelativeOverlap" />

                        <ImageView
                            android:id="@id/add_note"
                            android:layout_width="27dp"
                            android:layout_height="27dp"
                            android:src="@drawable/icon_plus"
                            android:padding="6dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            tools:ignore="ContentDescription" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</RelativeLayout>